[gd_scene load_steps=8 format=2]

[ext_resource path="res://ghost.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=3]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.2
height = 0.2

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 0.1
height = 0.2

[sub_resource type="BoxShape" id=7]

[node name="Ghost" type="Area" groups=[
"Ghost",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
monitoring = false
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3, 0 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="LeftEye" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, -0.4, 4, 0.9 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="LeftEye2" type="MeshInstance" parent="LeftEye"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0499997, 0.12 )
mesh = SubResource( 6 )
material/0 = null

[node name="RightEye" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0.4, 4, 0.9 )
mesh = SubResource( 4 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="RightEye2" type="MeshInstance" parent="RightEye"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0499997, 0.12 )
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1, -1.42109e-14, -3.25841e-07, -1.62921e-07, 0.866025, 0.5, 2.82187e-07, 0.5, -0.866025, 0, 2, 1 )
shadow_enabled = true
spot_range = 10.0

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed" flags=3]
